--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  !-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="-1sPuuTLXhukNYl_ngZzxg7sycv13w64fpG9dLmPGZc" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>XatekStudio — Premium Websites</title>
   <meta name="description" content="XatekStudio — premium-looking, fast & affordable websites for small businesses. Based in Bangladesh." />
