--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>XatekStudio — Premium Websites</title>
   <meta name="description" content="XatekStudio — premium-looking, fast & affordable websites for small businesses. Based in Bangladesh." />
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     :root{
       --bg:#070606;
